--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "projetoentrega",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./server.js"
@@ -16,5 +15,15 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sb-cruz/ProjetoEntrega.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/Sb-cruz/ProjetoEntrega/issues"
+  },
+  "homepage": "https://github.com/Sb-cruz/ProjetoEntrega#readme",
+  "description": ""
 }
